--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ h1 {
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
         border-top-right-radius: 0;
+        animation-range: entry 50% cover 30%;
     }
     nav ul {
         display: none;
